tests/paczka1/small_fuzzy/98718664.err
Error in line 4: Cjkz S608 31,3
Error in line 5: Cjkz S652 16,0
Error in line 1: KIi4Q S232 44,9
